fix(admin): fix List.of varargs type inference in AdminServiceTest